--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -21,11 +21,12 @@ jobs:
 
     - name: Configure and Compile Launcher
       shell: powershell
+      working-directory: ${{ github.workspace }}
       run: |
         # 1. Read URL from the 'target_url' file in the root
         $url = Get-Content target_url -Raw
         $url = $url.Trim()
-        
+
         if ([string]::IsNullOrWhiteSpace($url)) {
           Write-Error "Target URL is empty in 'target_url' file!"
           exit 1
@@ -42,11 +43,12 @@ jobs:
         # 3. Compile C# to EXE using the built-in Windows Compiler
         # We use the absolute path to csc.exe to avoid "command not found" errors
         $CSC = "C:\Windows\Microsoft.NET\Framework64\v4.0.30319\csc.exe"
-        
+
         & $CSC /target:exe /out:Windows/StremioNeoLauncher.exe /r:Microsoft.CSharp.dll Windows/Launcher.cs
 
     - name: Build Installer
       # Runs Inno Setup on the script
+      working-directory: ${{ github.workspace }}
       run: iscc Windows/installer.iss
 
     - name: Upload Setup.exe
